# trackage

./: .dockerignore  .gitignore  .release-it.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.sample
.github/workflows/: release.yml  rust.yml
docs/: COURIERS.md
migrations/: 0001_create_packages_and_metadata.sql  0002_create_package_status.sql  0003_add_eta_and_location.sql  0004_add_status_description.sql  0005_add_tracking_url.sql  0006_add_deleted_at.sql  0007_normalize_dates_rfc3339.sql
src/: config.rs  email_poller.rs  extractors.rs  imap_client.rs  main.rs  state.rs  status_poller.rs  util.rs  web.rs
src/courier/: fedex.rs  mod.rs  ups.rs  ups_web.rs  usps.rs
src/db/: mod.rs  sqlite.rs
static/: index.html
