[package]
name = "trackage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
ctrlc = "3.4"
figment = { version = "0.10", features = ["toml", "env"] }
html2text = "0.12"
imap = "3.0.0-alpha.15"
mailparse = "0.14"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracking-numbers = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "3", features = ["json"] }
