[package]
name = "trackage"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
ctrlc = "3.4"
figment = { version = "0.10", features = ["toml", "env"] }
html2text = "0.12"
imap = "3.0.0-alpha.15"
mailparse = "0.14"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracking-numbers = "0.1.2"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
ureq = { version = "3", features = ["json"] }
reqwest = { version = "0.12", features = ["blocking", "cookies", "json", "gzip", "brotli", "deflate"] }
axum = "0.8"
tokio = { version = "1", features = ["rt", "net", "time"] }
